--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="styles/style.css" />
     <title>Document</title>
   </head>
   <body>
@@ -21,7 +21,7 @@
           <div class="search_list"></div>
         </div>
         <div class="result">
-          <div class="result__elem">
+          <!-- <div class="result__elem">
             <div class="result__info">
               <div class="result__name">
                 <span class="result__key">Name:</span>
@@ -39,10 +39,10 @@
             <div class="result__buttons">
               <button class="result__delete"></button>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
-    <script type="module" src="/scripts/index.js"></script>
+    <script type="module" src="scripts/index.js"></script>
   </body>
 </html>
